# shell-use

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  server.json
src/shell_use/: __init__.py  server.py  tmux.py  tools.py
tests/: test_server.py  test_tmux.py
